--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Кваст</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
@@ -80,15 +80,15 @@
       <div class="benefits">
         <ul>
           <li class="benefit-item">
-            <h2>Варим сами</h2>
+            <h2 class="benefit-title">Варим сами</h2>
             <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
           </li>
           <li class="benefit-item">
-            <h2>Своё, родное</h2>
+            <h2 class="benefit-title">Своё, родное</h2>
             <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
           </li>
           <li class="benefit-item">
-            <h2>Не экономим</h2>
+            <h2 class="benefit-title">Не экономим</h2>
             <p>Человек это то, что он ест и пьёт. У нас только качественные ингредиенты.</p>
           </li>
         </ul>
