add basic styles part 2

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <td>35</td>
                 </tr>
               </table>
-              <p>Ржаной хлеб, Вода, Солод, Соль</p>
+              <p class="news-card-composition">Ржаной хлеб, Вода, Солод, Соль</p>
             </div>
             <img src="./img/bottle-left.jpg" alt="Вахтёр">
             <p class="news-card-description">
@@ -64,7 +64,7 @@
                   <td>27</td>
                 </tr>
               </table>
-              <p>Ячменный хлеб, Вода, Солод, Апельсин</p>
+              <p class="news-card-composition">Ячменный хлеб, Вода, Солод, Апельсин</p>
             </div>
             <img src="./img/bottle-right.jpg" alt="Романтик">
             <p class="news-card-description">Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
@@ -97,16 +97,16 @@
       <div class="history">
         <h2>Немного истории</h2>
         <dl>
-          <dt>Происхождение кваса
-            <i>Источник:<a href="#"> ru.wikipedia.org</a></i>
+          <dt class="history-title">Происхождение кваса
+            <i class="history-source">Источник:<a href="#"> ru.wikipedia.org</a></i>
           </dt>
           <dd>
             <img src="./img/wiki-1.png" alt="Кружка с квасом">
             <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
           </dd>
-          <dt>
+          <dt class="history-title">
             Классификация кваса
-            <i>Источник:<a href="#"> ru.wikipedia.org</a></i>
+            <i class="history-source">Источник:<a href="#"> ru.wikipedia.org</a></i>
           </dt>
           <dd>
             <img src="./img/wiki-2.png" alt="Кружка с квасом">
