--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h2>Немного истории</h2>
         <dl>
           <dt class="history-title">Происхождение кваса
-            <i class="history-source">Источник:<a href="#"> ru.wikipedia.org</a></i>
+            <i class="history-source">Источник:<a href="#">ru.wikipedia.org</a></i>
           </dt>
           <dd>
             <img src="./img/wiki-1.png" alt="Кружка с квасом">
@@ -106,7 +106,7 @@
           </dd>
           <dt class="history-title">
             Классификация кваса
-            <i class="history-source">Источник:<a href="#"> ru.wikipedia.org</a></i>
+            <i class="history-source">Источник:<a href="#">ru.wikipedia.org</a></i>
           </dt>
           <dd>
             <img src="./img/wiki-2.png" alt="Кружка с квасом">
@@ -119,7 +119,7 @@
         <h2>Пресса о нас</h2>
         <blockquote>
           <p>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</p>
-          <cite>Газета столичный Стольник<a сlass="btn" href="#"> Читать далее</a></cite>
+          <cite>Газета столичный Стольник</cite><a сlass="btn" href="#">Читать далее</a>
         </blockquote>
       </div>
 
@@ -190,8 +190,6 @@
               <label for="volume">Объём заказа:</label><br>
               <select name="volume" id="volume">
                 <option value="1">От 5 до 10 баррелей в неделю </option>
-                <option value="2">От 10 до 15 баррелей в неделю</option>
-                <option value="3">От 15 до 20 баррелей в неделю</option>
               </select>
             </div>
             <div class="order-form-item">
@@ -235,9 +233,7 @@
         <p>При перепечатке материалов ссылка на сайт обязательна!</p>
 
         <div>
-          <img src="./img/htmlacademy.png" alt="Логотип">
-          <b>Разработчик:</b>
-          <a href="#"> HTML Academy</a>
+          <img src="./img/htmlacademy.png" alt="Логотип"  width="27" height="34"> <b>Разработчик:</b> <a href="#"> HTML Academy</a>
         </div>
 
 
